test/nexj/invalidbase/messages/CircularInheritance_B.message
<Message base="CircularInheritance_A">
   <Parts>
      <Value name="b" type="string"/>
   </Parts>
</Message>
